samples/_failures_safe/1761128763_ca3aff_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e8726944.c:190: error: expected ‘;’, ‘,’ or ‘)’ at end of input
